# robotics-video-inference-bridge

./: .gitignore  README.md
.VSCodeCounter/2026-02-04_20-15-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cloud-processor/: .env.local.example  README.md  main.py  pyproject.toml
edge-client/: README.md  main.py  pyproject.toml
edge-embedded-client/: .clang-format  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.old
edge-embedded-client/main/: CMakeLists.txt  Kconfig.projbuild  board.c  example.c  example.h  idf_component.yml  main.c  media.c  media.h
web-client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-client/src/: main.ts  types.ts
